# U

./: .gitignore
MaterialU/Bases de datos/: Ejemplo 2FN.docx  Ejercicio 3FN.docx  Ejercicios de algebra relacional.docx  Lab1 Expresiones y formatos en Postgres.doc  Lab2 Sentencias DML DDL.doc  Laboratorio transformación modelo ER a relacional(DbSchema) .docx  Proyectos Bases de datos 2024-I.docx
MaterialU/Electricidad y Magnetismo/: .~lock.laboratorio 1 electricidad.docx#  laboratorio 1 electricidad.docx
MaterialU/Fisica/: Mediciones Lab rampa.txt
MaterialU/Ing. de software 1/: 0. FORMATO_IEEE_2024.docx
MaterialU/Maquinas digitales/: MD_02.X.rar
MaterialU/POO/: Asociaciones.cpp
MaterialU/POO/Polimorfismo (24 Enero)/: main.cpp
MaterialU/Sistemas operativos/: parcial1.operativos (1).docx  parcial1.operativos.docx
TrabajosU/Algoritmia/Sudoku/: Sudoku.cbp  Sudoku.depend  Sudoku.layout  cuerpoSudoku.h  main.cpp
TrabajosU/Estadistica/: .Rhistory  Datos Produc Agric.xlsx  DatosER.xlsx  SolucionTallerR.docx  carros.xlsx  datosRedesSocialesM.xlsx
TrabajosU/Estadistica/R/: DatosER.xlsx  EjerciciosClase0404.R  EjerciciosClase0703.R  GeneralidadesR.R  Proyecto.R  Prueba_hipotesis.R  Prueba_hipotesis2.R  Regresion.R  SolucionTallerR.R  ggplot2.R  taller Bivariado.R
TrabajosU/Estructuras de datos/L1/: CMakeLists.txt  main.cpp
TrabajosU/Estructuras de datos/L4/: CMakeLists.txt  ColorTexto.txt  Interfaces.cpp  Interfaces.h  Laberinto.cpp  Laberinto.h  (+10 more)
TrabajosU/Estructuras de datos/L6/: CMakeLists.txt  Game.cpp  Game.h  Graph.cpp  Graph.h  List.cpp  main.cpp
(+282 files in other folders)
